package cz.tul.roman.spanek.stin._6.accouting.model;

public enum Currency {
    CZK,
    EUR,
    USD
}

